Manual JPackage implementation. (#146)
* Removed Badass Runtime Plugin.

* New directory for the game icons.

* Simplified tasks.

* Improved jpackage debloat.

* Fixed all pending issues.

- Fixed working-directory-after-packing issue.
- Reduced JRE size up to 40mb.
- Renamed all tasks to be more explicit about its functionality.
- Now we only run jlink once.
- Extra-debloat for certain OS's.

TO-DO: Check if all Mac-specific path are correct.

* Fixed app crash when trying to get missing music/sound file.

* Minor I/O fix.