@@ -1,8 +1,6 @@
 plugins {
     id 'application'
     id 'de.undercouch.download' version '4.0.0'
-    id 'com.github.breadmoirai.github-release' version '2.2.9'
-    id 'org.beryx.runtime' version '1.2.0'
 }
 
 sourceSets {
@@ -11,7 +9,7 @@ sourceSets {
 }
 
 static def osName() { System.getProperty('os.name').toLowerCase(Locale.ROOT) }
-def releasesDir = "${buildDir}/releases"
+
 mainClassName = "launcher.DesktopLauncher"
 
 dependencies {
@@ -39,76 +37,125 @@ task dist(type: Jar) {
 dist.dependsOn classes
 run.dependsOn classes
 
-runtime {
-    modules = ['java.base', 'java.desktop', 'jdk.unsupported', 'jdk.unsupported.desktop','java.logging']
-    options = ['--strip-debug', '--no-header-files', '--no-man-pages', '--strip-native-commands', '--compress', '2']
-    javaHome = "${projectDir}/jdk-14"
-    
-    jpackage {
-    	jpackageHome = "${projectDir}/jdk-14"
-    	imageOutputDir = file(releasesDir)
-		imageName = 'AO-Java'
-		
-		if (osName().contains('windows')) {
-			imageOptions = ['--icon', "${projectDir}/assets/ao.ico",
-							'--app-version', "${project.version}"]
-		} else if (osName().contains('linux')) {
-			imageOptions = ['--icon', "${projectDir}/assets/ao.png",
-							'--app-version', "${project.version}"]
-		} else if (osName().contains('mac')) {
-			imageOptions = ['--icon', "${projectDir}/assets/ao.icns",
-							'--app-version', "${project.version}"]
-		}
-		
-        if (osName().contains('mac')) {
-        	jvmArgs = ['-XstartOnFirstThread']
-    	}
-		
-        skipInstaller = true
-    }
+// Determine where the JDK is going to be (Windows/Linux and Mac)
+def runtimePath = "${buildDir}/jre"
+if (osName().contains('mac')) {
+	runtimePath = "${buildDir}/jre/contents/plugins/Java.runtime/Contents/Home"
 }
 
-tasks.jre.doFirst {
-	
-	download {
+// creates a replacement runtime via jlink command (much smaller than jpackage)
+task jlink(type: Exec, dependsOn: dist) {
 
-		if (osName().contains('windows')) {
-			src 'https://download.java.net/java/early_access/jpackage/8/openjdk-14-jpackage+8_windows-x64_bin.zip'
-		} else if (osName().contains('linux')) {
-			src 'https://download.java.net/java/early_access/jpackage/8/openjdk-14-jpackage+8_linux-x64_bin.tar.gz'
-		} else if (osName().contains('mac')) {
-			src 'https://download.java.net/java/early_access/jpackage/8/openjdk-14-jpackage+8_osx-x64_bin.tar.gz'
-		}
-		
-		dest projectDir
-		overwrite false
-	}
-	
-	if (!file("${projectDir}/jdk-14").exists()) {
-		copy {
-			
+	doFirst() {
+		download {
+
 			if (osName().contains('windows')) {
-				from zipTree("${projectDir}/openjdk-14-jpackage+8_windows-x64_bin.zip")
+				src 'https://download.java.net/java/early_access/jpackage/8/openjdk-14-jpackage+8_windows-x64_bin.zip'
 			} else if (osName().contains('linux')) {
-				from tarTree("${projectDir}/openjdk-14-jpackage+8_linux-x64_bin.tar.gz")
+				src 'https://download.java.net/java/early_access/jpackage/8/openjdk-14-jpackage+8_linux-x64_bin.tar.gz'
 			} else if (osName().contains('mac')) {
-				from tarTree("${projectDir}/openjdk-14-jpackage+8_osx-x64_bin.tar.gz")
+				src 'https://download.java.net/java/early_access/jpackage/8/openjdk-14-jpackage+8_osx-x64_bin.tar.gz'
 			}
-			
-			into projectDir
+
+			dest projectDir
+			overwrite false
+		}
+
+		if (!file("${projectDir}/jdk-14").exists()) {
+			copy {
+
+				if (osName().contains('windows')) {
+					from zipTree("${projectDir}/openjdk-14-jpackage+8_windows-x64_bin.zip")
+				} else if (osName().contains('linux')) {
+					from tarTree("${projectDir}/openjdk-14-jpackage+8_linux-x64_bin.tar.gz")
+				} else if (osName().contains('mac')) {
+					from tarTree("${projectDir}/openjdk-14-jpackage+8_osx-x64_bin.tar.gz")
+				}
+
+				into projectDir
+			}
 		}
 	}
-}
+	
+	// Overwrite previous packaged application.
+	if (file("${buildDir}/distribution/${project.appName}").exists()) {
+		delete(file("${buildDir}/distribution/${project.appName}"))
+	}
+	
+	// Overwrite previous bundled jre.
+	if (file(runtimePath).exists()) {
+		delete(file(runtimePath))
+	}
+	
+	commandLine = [
+			"${projectDir}/jdk-14/bin/jlink",
+			'-p', "${projectDir}/jdk-14/jmods",
+			'--add-modules', 'java.base,java.desktop,jdk.unsupported,java.logging',
+			'--strip-debug',
+			'--no-header-files',
+			'--no-man-pages',
+			'--strip-native-commands',
+			'--vm=server',
+			'--compress=2',
+			'--output', runtimePath
+	]
 
-tasks.jpackage.doFirst {
-	if (!file(releasesDir).exists()) {
-		releasesDir.mkdirs()
+	doLast {
+		// Final debloat for jpackage
+		delete(file("${runtimePath}/conf"))
+		delete(file("${runtimePath}/legal"))
 	}
 }
 
-tasks.jpackage.doLast {
-	copy {
-		from file("assets")
-		into file("$releasesDir/AO-Java/app/assets")
+// creates application bundle (executable + runtime)
+task appBundle(type: Exec, dependsOn: jlink) {
+
+	def commands = [
+			"${projectDir}/jdk-14/bin/jpackage",
+			'--name', project.appName,
+			'--vendor', "Argentum Online Libre",
+			'--app-version', "${project.version}",
+			'--output', "${buildDir}/distribution",
+			'--runtime-image', runtimePath,
+			'--input', "${buildDir}/libs",
+			'--main-class', project.mainClassName,
+			'--main-jar', "${project.name}-${project.version}.jar"
+	]
+
+	if (osName().contains('windows')) {
+		commands << "--icon"
+		commands << "${projectDir}/assets/data/icons/ao.ico"
+	} else if (osName().contains('linux')) {
+		commands << "--icon"
+		commands << "${projectDir}/assets/data/icons/ao.png"
+	} else if (osName().contains('mac')) {
+		commands << "--icon"
+		commands << "${projectDir}/assets/data/icons/ao.icns"
+		commands << "--java-options"
+		commands << "-XstartOnFirstThread"
+	}
+
+	commandLine = commands
+	
+	doLast() {
+		copy {
+			if (osName().contains('windows')) {
+				from("${projectDir}/assets/data/icons/ao.ico")
+			} else if (osName().contains('linux')) {
+				from("${projectDir}/assets/data/icons/ao.png")
+			} else if (osName().contains('mac')) {
+				from("${projectDir}/assets/data/icons/ao.icns")
+			}
+			from("${projectDir}/assets")
+			from("${projectDir}/Config.json")
+			into("${buildDir}/distribution/${project.appName}/app")
+		}
+
+		// Debloat for Windows users.
+		delete fileTree("${buildDir}/distribution/${project.appName}/bin").matching { include "*.dll" exclude "applauncher.dll"}
+		delete fileTree("${buildDir}/distribution/${project.appName}/app").matching { include "api*.dll" }
+
+		System.out.println("Application '${project.appName}' packaged.")
+		System.out.println(" -> location: ${buildDir}/distribution/${project.appName}/")
 	}
 }
